# shared

./: .gitignore  AGENTS.md  Cargo.toml  README.md  codecov.yaml  dummy.just  justfile  package.json
.github/actions/update-shared-revisions/: action.yml
.github/workflows/: ci.yml  update-shared-revisions.yml
crates/stayhydated-dioxus/: Cargo.toml
crates/stayhydated-dioxus-core/: Cargo.toml
crates/stayhydated-dioxus-core/src/: cards.css  cards.rs  classes.rs  demo.css  demo_cards.rs  layout.css  layout.rs  lib.rs  links.rs  metadata.rs  motion.css  motion.rs  navigation.css  portal.css  portal.rs  projects.rs  shader_background.css  shader_background.rs  shader_background.wgsl  shader_background_renderer.rs  styles.rs  tabs.rs  theme.css  types.rs
crates/stayhydated-dioxus-core/src/base/select/: style.css
crates/stayhydated-dioxus-core/tests/: compile_fail.rs  compile_pass.rs  render_components.rs
crates/stayhydated-dioxus-core/tests/pass/: fullscreen_demo_page.rs  generic_select_value.rs  project_home_layout.rs  project_portal.rs  typed_tabs.rs
crates/stayhydated-dioxus-core/tests/ui/: button_variant_string.rs  button_variant_string.stderr  grid_columns_number.rs  grid_columns_number.stderr  link_target_string_href.rs  link_target_string_href.stderr  project_option_string_id.rs  project_option_string_id.stderr
crates/stayhydated-dioxus/src/: app.rs  header.rs  lib.rs  portal.rs  projects.rs
crates/stayhydated-dioxus/tests/: render_components.rs
crates/stayhydated-site/: Cargo.toml
crates/stayhydated-site/src/: lib.rs  route_cache.rs  routing.rs  sitemap.rs
crates/stayhydated-xtask/: Cargo.toml
crates/stayhydated-xtask/src/: book.rs  lib.rs  llms.rs  release.rs  web.rs
dummy/book-dummy/: book.toml
dummy/book-dummy/src/: SUMMARY.md  api-contract.md  introduction.md  operating-model.md  positioning.md
dummy/sum-numbers-ai-dummy/: Cargo.toml
dummy/sum-numbers-ai-dummy/src/: lib.rs
dummy/web-dummy/: .gitignore  Cargo.toml  package.json  preview.ts
dummy/web-dummy/public/: dx-components-theme.css
dummy/web-dummy/public/assets/: site.css
dummy/web-dummy/src/: cli.rs  components.rs  lib.rs  main.rs  terminal.rs
dummy/web-dummy/src/pages/: demos.rs  dioxus_demo.rs  home.rs  mod.rs  terminal_demo.rs
dummy/web-dummy/src/site/: app.rs  constants.rs  mod.rs  render.rs  routing.rs
dummy/xtask-dummy/: Cargo.toml
dummy/xtask-dummy/src/: cli.rs  main.rs
dummy/xtask-dummy/src/commands/: build_book.rs  build_llms_txt.rs  build_web.rs  mod.rs
xtask/: Cargo.toml  README.md
xtask/src/: cli.rs  main.rs
xtask/src/commands/: mod.rs  update_shared_revisions.rs
