[package]
name = "stayhydated-dioxus-core"
description = "Generic Dioxus components for public repository sites"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
bon = { workspace = true }
derive_more = { features = [ "as_ref", "display", "from" ], workspace = true }
dioxus = { features = [ "lib", "router" ], workspace = true }
dioxus-free-icons = { features = [ "lucide" ], workspace = true }
dioxus-primitives = { features = [ "router" ], workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
bytemuck = { features = [ "derive" ], version = "1.25" }
wasm-bindgen = "0.2.122"
web-sys = { features = [
  "console",
  "Document",
  "DomRect",
  "Element",
  "HtmlCanvasElement",
  "Window",
], version = "0.3.99" }
wgpu = { default-features = false, features = [ "std", "webgpu", "wgsl" ], version = "29.0.3" }

[dev-dependencies]
trybuild = { workspace = true }

[lints]
workspace = true
