[package]
name = "stayhydated-dioxus-core"
description = "Generic Dioxus components for public repository sites"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
derive_more = { features = [ "as_ref", "display", "from" ], workspace = true }
dioxus = { features = [ "lib", "router" ], workspace = true }
dioxus-free-icons = { features = [ "lucide" ], workspace = true }
dioxus-primitives = { features = [ "router" ], workspace = true }
strum = { features = [ "derive" ], workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
bytemuck = { features = [ "derive" ], version = "1.25" }
wasm-bindgen = "0.2.126"
web-sys = { features = [
  "console",
  "Document",
  "DomRect",
  "Element",
  "HtmlCanvasElement",
  "Window",
], version = "0.3.103" }
wgpu = { default-features = false, features = [ "std", "webgpu", "wgsl" ], version = "30.0.0" }

[dev-dependencies]
dioxus = { features = [ "ssr" ], workspace = true }
naga = { features = [ "wgsl-in" ], version = "30.0.0" }
trybuild = { workspace = true }

[lints]
workspace = true
