[package]
name = "stayhydated-dioxus"
description = "Dioxus project-site wrapper and stayhydated project inventory"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
bon = { workspace = true }
dioxus = { features = [ "lib", "router" ], workspace = true }
dioxus-free-icons = { features = [ "lucide" ], workspace = true }
dioxus-primitives = { workspace = true }
stayhydated-dioxus-core = { workspace = true }
strum = { features = [ "derive" ], workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { features = [ "Clipboard", "Navigator", "Window" ], workspace = true }

[dev-dependencies]
dioxus = { features = [ "ssr" ], workspace = true }

[lints]
workspace = true
