[package]
name = "stayhydated-site"
description = "Shared site helpers for public repositories"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
readme = "README.md"

[features]
default = [ "web" ]
web = [ "dep:dioxus", "dep:web-sys", "dioxus/launch", "dioxus/web" ]

[dependencies]
bon = { workspace = true }
dioxus = { optional = true, workspace = true }
web-sys = { features = [ "Location" ], optional = true, workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
