[package]
name = "xtask-dummy"
description = "Dummy project maintenance tasks for sum-numbers-ai"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { features = [ "derive" ], workspace = true }
stayhydated-xtask = { workspace = true }
web-dummy = { workspace = true }

[lints]
workspace = true
